# safesecrets

./: .prettierrc.json  LICENSE  README.md  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Auth.css  Auth.tsx  Confirmation.css  Confirmation.tsx  Decryption.css  Decryption.tsx  Form.css  Form.tsx  List.css  List.tsx  Notification.css  Notification.tsx  NotificationManager.css  NotificationManager.tsx  Panel.css  Panel.tsx
src/contexts/: Context.tsx  NotificationContext.tsx
