[package]
name = "safesecrets"
version = "0.1.0"
description = ""
authors = ["Jiangtao He"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.0", features = ["process"] }
dirs = "5.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"
